--- a/Web Graphics-JS/css/style.css
+++ b/Web Graphics-JS/css/style.css
@@ -1,108 +1,38 @@
 html, body{
     width: 100%;
-    height: 100%;
+    height: 100%
 }
-/*////////////////////////////////////////
-Buttons
-*/
-.button{
-    display: inline-block;
-    background-color: rgb(100, 100,150);
-    color: white;
-    padding: 10px;
-    border: none;
-    margin-right: 5px;
-}
-.button:hover {
-    background-color: grey;
-    color: black;
-}
-
-/*////////////////////////////////////////
-Input Button
-*/
-#file-choice{
-    display: inline-block;
-}
-input{
-    background-color: rgb(50,100,100);
-    color: white;
-    text-align: center;
-    border: none;
-    margin: 5px;
-}
-
-/*////////////////////////////////////////
-Button and Input Button Container
-*/
-#head-content{
-    height: 15%;
-    width: 100%;
-    background-color: rgb(250,200,50);
-}
-
-#head-content div{
-    height: 50%;
-    width: 100%;
-}
-
-/*////////////////////////////////////////
-display video or image container onclick
-*/
-#imageFileContainer, #submit{
+/*******************/
+#image, #submit{
     cursor: auto;
 }
 
-#videoFileContainer, #submit{
+#video, #submit{
     cursor: auto;
 }
 #canvas{
     height: auto;
     width: auto;
 }
-#imageFileContainer{
+#image{
     display: none;
 }
 
-#videoFileContainer{
+#video{
     display: none;
 }
+/*******************/
 
-/*////////////////////////////////////////
-video container
-*/
-#videoFileContainer{
-    width: 100%;
-    height: 95%;
-}
-.top-wrapper{
-    width: inherit;
-    height: 40%;
-    overflow: hidden;
-    margin: 5px;
+#video{
+    max-width: 100%;
+    height: auto;
 }
 
-#vidContainer{
-    width: 40%;
-    height: inherit;
-    float: left;
+#media-container{
+    overflow-y: hidden;
 }
-#frameContainer{
-    width: 60%;
-    height: inherit;
-    float: right;
-}
-#frameContainer canvas{
-    visibility: hidden;
-    cursor: pointer;    
-}
-.bottom-wrapper{
-    width: inherit;
-    height: 60%;
-    overflow: scroll;
-}
-.frame-canvas:hover{
-    border: solid;
-    border-color: rgb(255,255,50);
-    cursor: pointer;
+#video-frames{
+    background-color: rgb(0,0,0);
+    color: rgb(255,255,255);
+    text-align: center;
 }
