--- a/Web Graphics-JS/css/style.css
+++ b/Web Graphics-JS/css/style.css
@@ -1,6 +1,10 @@
 html, body{
     width: 100%;
-    height: 100%
+    height: 100%;
+}
+#main-container{
+    width: 100%;
+    height: 100%;
 }
 /*******************/
 #image, #submit{
@@ -10,10 +14,18 @@ html, body{
 #video, #submit{
     cursor: auto;
 }
+#carouse-progressbar, #submit{
+    cursor: auto;
+}
+
+#col-carousel-container, #submit{
+    cursor: auto;
+}
 #canvas{
     height: auto;
     width: auto;
 }
+
 #image{
     display: none;
 }
@@ -21,8 +33,25 @@ html, body{
 #video{
     display: none;
 }
-/*******************/
 
+#carouse-progressbar{
+    display: none;
+}
+
+#col-carousel-container{
+    display: none;
+}
+/*******************/
+#head-content{
+    height: 10%;
+}
+#file-content{
+    height: 45%;
+}
+#row-carousel-container{
+    height: 45%;
+    overflow-y: scroll;
+}
 #video{
     max-width: 100%;
     height: auto;
@@ -35,4 +64,17 @@ html, body{
     background-color: rgb(0,0,0);
     color: rgb(255,255,255);
     text-align: center;
+}
+#video-frames img{
+    width: 100%;
+    height: 100%;
+}
+#row-carousel-container{
+    background-color: rgb(0,0,0);
+    position: relative;
+}
+#default{
+    color: rgb(255,255,255);
+    position: relative;
+    left: 40%;
 }
