--- a/Web Graphics-JS/css/style.css
+++ b/Web Graphics-JS/css/style.css
@@ -1,6 +1,7 @@
 html, body{
     width: 100%;
     height: 100%;
+    overflow: scroll;
 }
 #main-container{
     width: 100%;
@@ -50,7 +51,9 @@ html, body{
 }
 #row-carousel-container{
     height: 45%;
-    overflow-y: scroll;
+    overflow: scroll;
+    background-color: rgb(0,0,0);
+    position: relative;
 }
 #video{
     max-width: 100%;
@@ -68,10 +71,6 @@ html, body{
 #video-frames img{
     width: 100%;
     height: 100%;
-}
-#row-carousel-container{
-    background-color: rgb(0,0,0);
-    position: relative;
 }
 #default{
     color: rgb(255,255,255);
