--- a/Web Graphics-JS/css/style.css
+++ b/Web Graphics-JS/css/style.css
@@ -3,77 +3,94 @@ html, body{
     height: 100%;
     overflow: scroll;
 }
+
 #main-container{
     width: 100%;
     height: 100%;
 }
 /*******************/
-#image, #submit{
-    cursor: auto;
-}
-
-#video, #submit{
-    cursor: auto;
-}
-#carouse-progressbar, #submit{
-    cursor: auto;
-}
-
-#col-carousel-container, #submit{
-    cursor: auto;
-}
 #canvas{
     height: auto;
     width: auto;
 }
-
-#image{
-    display: none;
-}
-
-#video{
-    display: none;
-}
-
-#carouse-progressbar{
-    display: none;
-}
-
-#col-carousel-container{
-    display: none;
-}
 /*******************/
 #head-content{
-    height: 10%;
-}
-#file-content{
-    height: 45%;
-}
-#row-carousel-container{
-    height: 45%;
-    overflow: scroll;
-    background-color: rgb(0,0,0);
-    position: relative;
-}
-#video{
-    max-width: 100%;
-    height: auto;
+    height: 5%;
 }
 
-#media-container{
-    overflow-y: hidden;
+#file-content{
+    height: 40%;
 }
-#video-frames{
+#carousel-container{
+    height: 50%;
     background-color: rgb(0,0,0);
-    color: rgb(255,255,255);
+}
+#media-option{
+height:5%;
+}
+#file-choice-container{
+    position: relative;
+}
+
+#file-choice-container input{
+    height: 100%;
+    width: 60%;
+    position: relative;
+    float: left;
+}
+/***********BUTTONS******************/
+#upload{
+    height: 100%;
+    display: block;
     text-align: center;
 }
-#video-frames img{
-    width: 100%;
+
+/***********CAROUSEL*****************/
+
+#workspaceContainer{
     height: 100%;
-}
-#default{
-    color: rgb(255,255,255);
+}/*
+#carousel-slides{
     position: relative;
-    left: 40%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slide{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.media{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+*/
+.media{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    height: auto;
+}
+.chevron-hover i{
+    position: absolute;
+    top: 50%;
+}
+
+.left{
+    position: relative;
+    float: left;
+}
+
+.right{
+    position: relative;
+    float: right;
+}
+/***********HOVER MODE**********************/
+.chevron:hover {
+    z-index: 2;
+    color: #0000FF;
 }
